--- a/Day-1/html/ex01.html
+++ b/Day-1/html/ex01.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tiêu đề trang web</title>
   </head>
   <body>
-    <h1>hello 2</h1>
+    <h1>f8 học lập trình để đi làm</h1>
   </body>
 </html>
