Nộp Bài Tập Buổi 1

--- a/BaiTapDay-1/Lesson-2/index.html
+++ b/BaiTapDay-1/Lesson-2/index.html
@@ -23,6 +23,10 @@
                 <h3>Web Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </li>
+            <li>
+                <img height="50px" src="./img/camera.jpg" alt="Branding" />
+                <h3>Branding</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></li>
                 <img height="50px" src="./img/camera.jpg" alt="Branding" />
                 <h3>Branding</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
