--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1><li></h1></li></h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BaiTapBuoi-1</title>
+  </head>
+  <body>
+    <h1>Nộp Bài Tập Buổi 1:</h1>
+    <ul>
+        <li><a href="http://127.0.0.1:5500/f8-fullstack-K7/BaiTapDay-1/Lesson-1/index.html">Bài-1</a></li>
+        <li><a href="http://127.0.0.1:5500/f8-fullstack-K7/BaiTapDay-1/Lesson-2/index.html">Bài-2</a></li>
+        <li><a href="http://127.0.0.1:5500/f8-fullstack-K7/BaiTapDay-1/Lesson-3/index.html">Bài-3</a></li>
+    </ul>
+    <h2>Nộp Bài Tập Buổi 2:</h2>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+  </body>
 </html>
