Đẩy link bài tập

--- a/BaiTapDay-1/index.html
+++ b/BaiTapDay-1/index.html
@@ -12,5 +12,11 @@
         <li><a href="http://127.0.0.1:5500/f8-fullstack-K7/BaiTapDay-1/Lesson-2/index.html">Bài-2</a></li>
         <li><a href="http://127.0.0.1:5500/f8-fullstack-K7/BaiTapDay-1/Lesson-3/index.html">Bài-3</a></li>
     </ul>
+    <h2>Nộp Bài Tập Buổi 2:</h2>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
+    <li><a href=""></a></li>
   </body>
 </html>
