--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <li><a href="http://127.0.0.1:5500/f8-fullstack-K7/BaiTapDay-1/Lesson-3/index.html">Bài-3</a></li>
     </ul>
     <h2>Nộp Bài Tập Buổi 2:</h2>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
+        <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai1">Bài-1</a></li>
+        <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai2">Bài-2</a></li>
+        <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai3">Bài-3</a></li>
+        <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai4">Bài-4</a></li>
+        <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai5">Bài-5</a></li>
   </body>
 </html>
