Nộp Bài Tập Buổi 3

--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -11,7 +11,7 @@
         lorem
     </p>
     <blockquote>
-        <h3>học lập trinh không khó</h3>
+        <h3>học lập trình không khó</h3>
     </blockquote>
     <pre>
         Xin chào
