--- a/BaiTapDay-3/Lesson-1.html
+++ b/BaiTapDay-3/Lesson-1.html
@@ -6,7 +6,7 @@
     <title>Bài 1</title>
     <link rel="stylesheet" href="css/Lesson-1.css" />
     <script
-      src="https://kit.fontawesome.com/b3f370a139.js"
+      src="https://kit.fontawesome.com/b3f3git70a139.js"
       crossorigin="anonymous"
     ></script>
   </head>
