--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </ul>
     <h3>Nộp Bài Tập Buổi 3:</h3>
     <ul>
-      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai1">Bài-1</a></li>
-      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai2">Bài-2</a></li>
-      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai3">Bài-3</a></li>
-      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai4">Bài-4</a></li>
-      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-2/Bai5">Bài-5</a></li>
+      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-3/Lesson-1.html">Bài-1</a></li>
+      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-3/Lesson-2.html">Bài-2</a></li>
+      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-3/Lesson-3.html">Bài-3</a></li>
+      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-3/Lesson-4.html">Bài-4</a></li>
+      <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-3/Lesson-5.html">Bài-5</a></li>
   </ul>
   </body>
 </html>
