--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@
     <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-5/Lesson2.html">Bài-2</a></li>
     <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-5/Lesson3.html">Bài-3</a></li>
 </ul>
+<h4>Nộp Bài Tập Buổi 6:</h4>
+  <ul>
+    <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-6/Lesson1.html">Bài-1</a></li>
+    <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-6/Lesson2.html">Bài-2</a></li>
+    <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-6/Lesson3.html">Bài-3</a></li>
+</ul>
   </body>
 </html>
