--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BaiTapBuoi-1</title>
+    <title>BaiTap</title>
   </head>
   <body>
     <h1>Nộp Bài Tập Buổi 1:</h1>
@@ -40,7 +40,7 @@
     <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-5/Lesson2.html">Bài-2</a></li>
     <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-5/Lesson3.html">Bài-3</a></li>
 </ul>
-<h4>Nộp Bài Tập Buổi 6:</h4>
+<h5>Nộp Bài Tập Buổi 6:</h5>
   <ul>
     <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-6/Lesson1.html">Bài-1</a></li>
     <li><a href="https://phumai0815.github.io/f8-fullstack-K7/BaiTapDay-6/Lesson2.html">Bài-2</a></li>
