Nop bai tap buoi 8

--- a/BaiTapNgay-8/bai3.html
+++ b/BaiTapNgay-8/bai3.html
@@ -20,13 +20,13 @@
         </div>
         <div class="service-item">
             <img class="picture-item" src="./image/banhxe.jpg" alt="">
-            <h2 class="title-item">engine overhaul</h2>
+            <h2 class="title-item">power steering</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, reprehenderit?</p>
             <button class="read-more"><p>read more</p></button>
         </div>
         <div class="service-item">
             <img class="picture-item" src="./image/banhxe.jpg" alt="">
-            <h2 class="title-item">engine overhaul</h2>
+            <h2 class="title-item">oil change</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, reprehenderit?</p>
             <button class="read-more"><p>read more</p></button>
         </div>
@@ -34,19 +34,19 @@
     <div class="service-layout">
         <div class="service-item">
             <img class="picture-item" src="./image/banhxe.jpg" alt="">
-            <h2 class="title-item">engine overhaul</h2>
+            <h2 class="title-item">smog check</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, reprehenderit?</p>
             <button class="read-more"><p>read more</p></button>
         </div>
         <div class="service-item">
             <img class="picture-item" src="./image/banhxe.jpg" alt="">
-            <h2 class="title-item">engine overhaul</h2>
+            <h2 class="title-item">tyre balncing</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, reprehenderit?</p>
             <button class="read-more"><p>read more</p></button>
         </div>
         <div class="service-item">
             <img class="picture-item" src="./image/banhxe.jpg" alt="">
-            <h2 class="title-item">engine overhaul</h2>
+            <h2 class="title-item">Fleet service</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, reprehenderit?</p>
             <button class="read-more"><p>read more</p></button>
         </div>
