--- a/Hoccss/ex05.html
+++ b/Hoccss/ex05.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 tabindex="0">Pseudo class</h1>
+    <button>click me</button>
     <!-- <div>
         <input tabindex="1" type="text" placeholder="Họ tên">
     </div>  
@@ -25,15 +26,40 @@
     <h2 class="item">Sản phẩm 4</h2>
     <h2 class="item inactive">Sản phẩm 5</h2>
     </div>  -->
+    <!-- <div class="products">
+        <h2 class="item">Sản phẩm 1</h2>
+        <h2 class="item">Sản phẩm 2</h2>
+        <h2 class="item active">Sản phẩm 3</h2>
+        <h2 class="item">Sản phẩm 4</h2>
+        <h2 class="item">Sản phẩm 5</h2>
+    </div>
+    <button class="btn">Click me</button> -->
+    <div>
+        <input type="checkbox">
+        <span>Item 1</span>
+    </div>
+    <div>
+        <input type="checkbox" checked>
+        <span>Item 2</span>
+    </div>
+    <div>
+        <input type="checkbox" checked disabled>
+        <span>Item 3</span>
+    </div>
     <div class="products">
-        <h2>Sản phẩm 1</h2>
-        <h2>Sản phẩm 2</h2>
-        <h2>Sản phẩm 3</h2>
-        <h2>Sản phẩm 4</h2>
-        <h2>Sản phẩm 5</h2>
-        <h2>Sản phẩm 6</h2>
-        <h2>Sản phẩm 7</h2>
-        <h2>Sản phẩm 8</h2>
+        <h2 >Sản phẩm 1</h2>
+        <h2 >Sản phẩm 2</h2>
+       <div>
+            <h2 >Sản phẩm 3</h2>
+            <h2 >Sản phẩm 4</h2>
+            <h2 >Sản phẩm 5</h2>
+
+       </div>
+        <h2 >Sản phẩm 6</h2>
+        <h2 >Sản phẩm 7</h2>
+        <h2 >Sản phẩm 8</h2>
+        <h2 >Sản phẩm 8</h2>
+        <h2 >Sản phẩm 8</h2>
     </div>
 </body>
 </html>
